--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>StayFinder - Find Your Perfect PG & Hostel</title>
+    <title>SmartStay - Find Your Perfect PG & Hostel</title>
+    <link rel="icon" type="image/png" href="/image.png" />
     <meta name="description" content="Discover verified PG accommodations and hostels near your college with transparent pricing, honest reviews, and modern amenities. Your trusted platform for student housing." />
-    <meta name="author" content="StayFinder" />
+    <meta name="author" content="SmartStay" />
     <meta name="keywords" content="PG finder, hostel finder, student accommodation, college PG, verified PG, affordable hostel" />
 
-    <meta property="og:title" content="StayFinder - Find Your Perfect PG & Hostel" />
+    <meta property="og:title" content="SmartStay - Find Your Perfect PG & Hostel" />
     <meta property="og:description" content="Discover verified PG accommodations and hostels near your college with transparent pricing and honest reviews." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@StayFinder" />
+    <meta name="twitter:site" content="@SmartStay" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
