--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,11 +12,11 @@
     <meta property="og:title" content="SmartStay - Find Your Perfect PG & Hostel" />
     <meta property="og:description" content="Discover verified PG accommodations and hostels near your college with transparent pricing and honest reviews." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@SmartStay" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/image.png" />
   </head>
 
   <body>
